--- a/web_app/package.json
+++ b/web_app/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "dynamodb-doc": "^1.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "jade": "^1.11.0",
     "lodash": "^4.16.4",
     "moment": "^2.15.1",
