--- a/extension/extension/manifest.json
+++ b/extension/extension/manifest.json
@@ -4,7 +4,7 @@
   "description": "",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icons/icon16.png",
     "default_popup": "popup.html"
   },
   "permissions": [
