--- a/extension/extension/manifest.json
+++ b/extension/extension/manifest.json
@@ -8,7 +8,9 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "http://*/*",
+    "https://*/*"
   ],
   "content_scripts": [
     {
