--- a/extension/app/package.json
+++ b/extension/app/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "concurrently": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta10",
+    "python-shell": "^0.4.0",
     "serve-favicon": "~2.3.2"
   }
 }
